--- a/Presentable_Notebook.ipynb
+++ b/Presentable_Notebook.ipynb
@@ -2,26 +2,305 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "015fab0b-6e77-4a0e-8230-3ea0d9420cef",
+   "execution_count": 4,
+   "id": "e450fe13-b857-4319-8997-50d258970b1f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "90953ea7-5055-48f4-bb69-42103f545e9b",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "my presentable note book\n"
+      "Collecting fastparquet\n",
+      "  Downloading fastparquet-2024.11.0-cp311-cp311-win_amd64.whl.metadata (4.3 kB)\n",
+      "Requirement already satisfied: pandas>=1.5.0 in c:\\users\\hdabe\\anaconda3\\lib\\site-packages (from fastparquet) (2.1.4)\n",
+      "Requirement already satisfied: numpy in c:\\users\\hdabe\\anaconda3\\lib\\site-packages (from fastparquet) (1.26.4)\n",
+      "Collecting cramjam>=2.3 (from fastparquet)\n",
+      "  Downloading cramjam-2.10.0-cp311-cp311-win_amd64.whl.metadata (5.1 kB)\n",
+      "Requirement already satisfied: fsspec in c:\\users\\hdabe\\anaconda3\\lib\\site-packages (from fastparquet) (2023.10.0)\n",
+      "Requirement already satisfied: packaging in c:\\users\\hdabe\\anaconda3\\lib\\site-packages (from fastparquet) (23.1)\n",
+      "Requirement already satisfied: python-dateutil>=2.8.2 in c:\\users\\hdabe\\anaconda3\\lib\\site-packages (from pandas>=1.5.0->fastparquet) (2.8.2)\n",
+      "Requirement already satisfied: pytz>=2020.1 in c:\\users\\hdabe\\anaconda3\\lib\\site-packages (from pandas>=1.5.0->fastparquet) (2023.3.post1)\n",
+      "Requirement already satisfied: tzdata>=2022.1 in c:\\users\\hdabe\\anaconda3\\lib\\site-packages (from pandas>=1.5.0->fastparquet) (2023.3)\n",
+      "Requirement already satisfied: six>=1.5 in c:\\users\\hdabe\\anaconda3\\lib\\site-packages (from python-dateutil>=2.8.2->pandas>=1.5.0->fastparquet) (1.16.0)\n",
+      "Downloading fastparquet-2024.11.0-cp311-cp311-win_amd64.whl (671 kB)\n",
+      "   ---------------------------------------- 0.0/671.0 kB ? eta -:--:--\n",
+      "   - ------------------------------------- 20.5/671.0 kB 330.3 kB/s eta 0:00:02\n",
+      "   --- ----------------------------------- 61.4/671.0 kB 656.4 kB/s eta 0:00:01\n",
+      "   ----------- ---------------------------- 194.6/671.0 kB 1.5 MB/s eta 0:00:01\n",
+      "   ------------ --------------------------- 204.8/671.0 kB 1.4 MB/s eta 0:00:01\n",
+      "   ----------------------- ---------------- 389.1/671.0 kB 1.7 MB/s eta 0:00:01\n",
+      "   -------------------------- ------------- 450.6/671.0 kB 1.9 MB/s eta 0:00:01\n",
+      "   ------------------------------------ --- 604.2/671.0 kB 1.9 MB/s eta 0:00:01\n",
+      "   ---------------------------------------- 671.0/671.0 kB 1.9 MB/s eta 0:00:00\n",
+      "Downloading cramjam-2.10.0-cp311-cp311-win_amd64.whl (1.7 MB)\n",
+      "   ---------------------------------------- 0.0/1.7 MB ? eta -:--:--\n",
+      "   ---- ----------------------------------- 0.2/1.7 MB 5.9 MB/s eta 0:00:01\n",
+      "   ------- -------------------------------- 0.3/1.7 MB 6.3 MB/s eta 0:00:01\n",
+      "   ---------- ----------------------------- 0.5/1.7 MB 3.5 MB/s eta 0:00:01\n",
+      "   --------------- ------------------------ 0.6/1.7 MB 4.1 MB/s eta 0:00:01\n",
+      "   ------------------ --------------------- 0.8/1.7 MB 3.6 MB/s eta 0:00:01\n",
+      "   ------------------------ --------------- 1.1/1.7 MB 3.9 MB/s eta 0:00:01\n",
+      "   --------------------------- ------------ 1.2/1.7 MB 3.7 MB/s eta 0:00:01\n",
+      "   ---------------------------------- ----- 1.5/1.7 MB 4.1 MB/s eta 0:00:01\n",
+      "   ------------------------------------ --- 1.6/1.7 MB 3.8 MB/s eta 0:00:01\n",
+      "   ---------------------------------------- 1.7/1.7 MB 3.7 MB/s eta 0:00:00\n",
+      "Installing collected packages: cramjam, fastparquet\n",
+      "Successfully installed cramjam-2.10.0 fastparquet-2024.11.0\n",
+      "Note: you may need to restart the kernel to use updated packages.\n"
      ]
     }
    ],
    "source": [
-    "print('my presentable note book')"
+    "pip install fastparquet"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "f83e0a79-7fa6-4eac-984e-389e56ac5b80",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "taxi_df = pd.read_parquet(\"Data/yellow_tripdata_2019-01.parquet\")#, engine='fastparquet')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "29129f38-d422-4792-9239-8354bb8fd51a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>VendorID</th>\n",
+       "      <th>tpep_pickup_datetime</th>\n",
+       "      <th>tpep_dropoff_datetime</th>\n",
+       "      <th>passenger_count</th>\n",
+       "      <th>trip_distance</th>\n",
+       "      <th>RatecodeID</th>\n",
+       "      <th>store_and_fwd_flag</th>\n",
+       "      <th>PULocationID</th>\n",
+       "      <th>DOLocationID</th>\n",
+       "      <th>payment_type</th>\n",
+       "      <th>fare_amount</th>\n",
+       "      <th>extra</th>\n",
+       "      <th>mta_tax</th>\n",
+       "      <th>tip_amount</th>\n",
+       "      <th>tolls_amount</th>\n",
+       "      <th>improvement_surcharge</th>\n",
+       "      <th>total_amount</th>\n",
+       "      <th>congestion_surcharge</th>\n",
+       "      <th>airport_fee</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>2019-01-01 00:46:40</td>\n",
+       "      <td>2019-01-01 00:53:20</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.5</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>N</td>\n",
+       "      <td>151</td>\n",
+       "      <td>239</td>\n",
+       "      <td>1</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>0.5</td>\n",
+       "      <td>0.5</td>\n",
+       "      <td>1.65</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.3</td>\n",
+       "      <td>9.95</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>None</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>2019-01-01 00:59:47</td>\n",
+       "      <td>2019-01-01 01:18:59</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>2.6</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>N</td>\n",
+       "      <td>239</td>\n",
+       "      <td>246</td>\n",
+       "      <td>1</td>\n",
+       "      <td>14.0</td>\n",
+       "      <td>0.5</td>\n",
+       "      <td>0.5</td>\n",
+       "      <td>1.00</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.3</td>\n",
+       "      <td>16.30</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>None</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2</td>\n",
+       "      <td>2018-12-21 13:48:30</td>\n",
+       "      <td>2018-12-21 13:52:40</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>N</td>\n",
+       "      <td>236</td>\n",
+       "      <td>236</td>\n",
+       "      <td>1</td>\n",
+       "      <td>4.5</td>\n",
+       "      <td>0.5</td>\n",
+       "      <td>0.5</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.3</td>\n",
+       "      <td>5.80</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>None</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2</td>\n",
+       "      <td>2018-11-28 15:52:25</td>\n",
+       "      <td>2018-11-28 15:55:45</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>N</td>\n",
+       "      <td>193</td>\n",
+       "      <td>193</td>\n",
+       "      <td>2</td>\n",
+       "      <td>3.5</td>\n",
+       "      <td>0.5</td>\n",
+       "      <td>0.5</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.3</td>\n",
+       "      <td>7.55</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>None</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2</td>\n",
+       "      <td>2018-11-28 15:56:57</td>\n",
+       "      <td>2018-11-28 15:58:33</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>N</td>\n",
+       "      <td>193</td>\n",
+       "      <td>193</td>\n",
+       "      <td>2</td>\n",
+       "      <td>52.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.5</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.3</td>\n",
+       "      <td>55.55</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>None</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   VendorID tpep_pickup_datetime tpep_dropoff_datetime  passenger_count  \\\n",
+       "0         1  2019-01-01 00:46:40   2019-01-01 00:53:20              1.0   \n",
+       "1         1  2019-01-01 00:59:47   2019-01-01 01:18:59              1.0   \n",
+       "2         2  2018-12-21 13:48:30   2018-12-21 13:52:40              3.0   \n",
+       "3         2  2018-11-28 15:52:25   2018-11-28 15:55:45              5.0   \n",
+       "4         2  2018-11-28 15:56:57   2018-11-28 15:58:33              5.0   \n",
+       "\n",
+       "   trip_distance  RatecodeID store_and_fwd_flag  PULocationID  DOLocationID  \\\n",
+       "0            1.5         1.0                  N           151           239   \n",
+       "1            2.6         1.0                  N           239           246   \n",
+       "2            0.0         1.0                  N           236           236   \n",
+       "3            0.0         1.0                  N           193           193   \n",
+       "4            0.0         2.0                  N           193           193   \n",
+       "\n",
+       "   payment_type  fare_amount  extra  mta_tax  tip_amount  tolls_amount  \\\n",
+       "0             1          7.0    0.5      0.5        1.65           0.0   \n",
+       "1             1         14.0    0.5      0.5        1.00           0.0   \n",
+       "2             1          4.5    0.5      0.5        0.00           0.0   \n",
+       "3             2          3.5    0.5      0.5        0.00           0.0   \n",
+       "4             2         52.0    0.0      0.5        0.00           0.0   \n",
+       "\n",
+       "   improvement_surcharge  total_amount  congestion_surcharge airport_fee  \n",
+       "0                    0.3          9.95                   NaN        None  \n",
+       "1                    0.3         16.30                   NaN        None  \n",
+       "2                    0.3          5.80                   NaN        None  \n",
+       "3                    0.3          7.55                   NaN        None  \n",
+       "4                    0.3         55.55                   NaN        None  "
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "taxi_df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "57e466d2-3964-4c98-888d-bc52d5024f9c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(7696617, 19)"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "taxi_df.shape"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e450fe13-b857-4319-8997-50d258970b1f",
+   "id": "0f2fac06-5e11-4f15-807e-7b17a2c506d5",
    "metadata": {},
    "outputs": [],
    "source": []
